working on optimizing homepage

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2665,6 +2665,7 @@ p.testimonials-name {
     font-weight: 500;
   }
   .team_section {
+    height: 500px;
     h2 {
       padding: 30px;
       font-size: 40px;
@@ -2929,7 +2930,7 @@ p.testimonials-name {
   }
   .split_section {
     .split_image {
-      height: 80vh;
+      height: 70vh;
       margin-bottom: 30px;
       object-fit: cover;
       width: 90%;
