--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2818,9 +2818,6 @@ p.testimonials-name {
   .Bc-Coquitlam .refinance-text p {
     font-size: 40px;
   }
-  // .faq_section {
-  //   background-image: url("") !important;
-  // }
 }
 
 @media all and (max-width: 441px) {
@@ -2835,6 +2832,7 @@ p.testimonials-name {
     gap: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
+    height: 120px;
     img {
       width: 50px;
       height: 50px;
