--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,30 +8,29 @@ $color-mid-gray: #606060;
 
 // $color-secondary: #8F682E;
 
+// @font-face {
+//     font-family: 'DejavuSans';
+//     src: url('dejavu-sans.book.ttf');
+//     font-display: swap;
+// }
+@font-face {
+  font-family: "AvenirBlack";
+  src: url("AvenirLTStd-Black.otf");
+  font-display: swap;
+}
+@font-face {
+  font-family: "AvenirBook";
+  src: url("AvenirLTStd-Book.otf");
+  font-display: swap;
+}
+@font-face {
+  font-family: "AvenirRoman";
+  src: url("AvenirLTStd-Roman.otf");
+  font-display: swap;
+}
 
-@font-face {
-    font-family: 'DejavuSans';
-    src: url('dejavu-sans.book.ttf');
-    font-display: swap;
-}
-@font-face {
-    font-family: 'AvenirBlack';
-    src: url('AvenirLTStd-Black.otf');
-    font-display: swap;
-}
-@font-face {
-    font-family: 'AvenirBook';
-    src: url('AvenirLTStd-Book.otf');
-    font-display: swap;
-}
-@font-face {
-    font-family: 'AvenirRoman';
-    src: url('AvenirLTStd-Roman.otf');
-    font-display: swap;
-}
-
-
-$font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'dejavusans';
+$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+  sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 $font-weight-normal: 300;
 $font-weight-bold: 600;
 
