--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -3,102 +3,160 @@
 @import "scss/variables";
 
 .overlay {
-    background-color: rgba(0, 0, 0, 0.65);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  background-color: rgba(0, 0, 0, 0.65);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
+.overlayMobile {
+  background-color: rgba(0, 0, 0, 0.65);
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 500px;
+}
 
-.description{
-    h3{
-        span{
-            margin-left: 20px;
-        }
+.description {
+  h3 {
+    span {
+      margin-left: 20px;
     }
-    p{
-        span{
-            color: #ffff;
-            font-weight: 100;
-        }
+  }
+  p {
+    span {
+      color: #ffff;
+      font-weight: 100;
     }
+  }
 }
 .carouselcaption {
-    top: 0;
-    bottom: 0;
-    vertical-align: middle;
-    display: flex;
-    z-index: 999;
-    .bannerCaption{
-        font-family: 'DejavuSans';
-        .sliderTitle{
-            color: $color-secondary;
-            margin: 0 auto;
-            font-size: 56px;
-            font-weight: 400;
-            line-height: 60px;
-        }
-        .sliderSubtitle{
-            font-family: "AvenirBook";
-            color: $color-white;
-            font-size: 40px;
-            font-weight: 100;
-            margin: 0 auto;
-        }
-        p{
-            font-family: 'dejavusans';
-            color: $color-white;
-            font-size: 16px;
-            font-weight: 100;
-            margin-top: 10px;
-        }
+  top: 0;
+  bottom: 0;
+  vertical-align: middle;
+  display: flex;
+  z-index: 999;
+  .bannerCaption {
+    font-family: "AvenirBook";
+    .sliderTitle {
+      color: $color-secondary;
+      margin: 0 auto;
+      font-size: 56px;
+      font-weight: 400;
+      line-height: 60px;
     }
-    
-    
-    .bannerBtn{
-        background: transparent;
-        border: 2px solid $color-white;
-        text-transform: uppercase;
-        font-family: 'AvenirBook';
-        font-size: 16px;
-        border-radius: 0;
-        padding-top: 11px;
-        margin-right: 20px;
-        span{
-            color: $color-secondary;
-            font-family: 'AvenirBlack';
-        }
-        &:hover{
-            background: transparent;
-            border: 2px solid $color-secondary;
-            color: $color-white;
-            opacity: .5;
-        }
-        
+    .sliderSubtitle {
+      font-family: "AvenirBook";
+      color: $color-white;
+      font-size: 40px;
+      font-weight: 100;
+      margin: 0 auto;
     }
+    p {
+      font-family: "AvenirBook";
+      color: $color-white;
+      font-size: 16px;
+      font-weight: 100;
+      margin-top: 10px;
+    }
+  }
+
+  .bannerBtn {
+    background: transparent;
+    border: 2px solid $color-white;
+    text-transform: uppercase;
+    font-family: "AvenirBook";
+    font-size: 16px;
+    border-radius: 0;
+    padding-top: 11px;
+    margin-right: 20px;
+    span {
+      color: $color-secondary;
+      font-family: "AvenirBlack";
+    }
+    &:hover {
+      background: transparent;
+      border: 2px solid $color-secondary;
+      color: $color-white;
+      opacity: 0.5;
+    }
+  }
 }
 
-@media all and (max-width: 441px){
-    .carouselcaption {
-        // bottom: 0;
-        .bannerCaption{
-            .sliderTitle{
-                font-size: 30px;
-                line-height: 40px;
-            }
-            .sliderSubtitle{
-                font-size: 20px;
-            }
-            p{
-                font-size: 13px;
-            }
-        }
-        
-        .bannerBtn{
-            font-size: 14px;
-            margin-top: 10px;
-        }
+@media all and (max-width: 441px) {
+  .carouselcaption {
+    // bottom: 0;
+    .bannerCaption {
+      .sliderTitle {
+        font-size: 30px;
+        line-height: 40px;
+      }
+      .sliderSubtitle {
+        font-size: 20px;
+      }
+      p {
+        font-size: 13px;
+      }
     }
+
+    .bannerBtn {
+      font-size: 14px;
+      margin-top: 10px;
+    }
+  }
+  .bannerDescStyle {
+    position: absolute;
+    top: 250px;
+    display: flex;
+    z-index: 999;
+    padding: 0 20px;
+    .bannerCaption {
+      font-family: "AvenirBook";
+      .sliderTitle {
+        color: $color-secondary;
+        margin: 0 auto;
+        font-weight: 400;
+        font-size: 30px;
+        line-height: 40px;
+      }
+      .sliderSubtitle {
+        font-family: "AvenirBook";
+        color: $color-white;
+        font-size: 40px;
+        font-weight: 100;
+        margin: 0 auto;
+      }
+      p {
+        font-family: "AvenirBook";
+        color: $color-white;
+        font-size: 16px;
+        font-weight: 100;
+        margin-top: 10px;
+      }
+    }
+
+    .bannerBtn {
+      background: transparent;
+      border: 2px solid $color-white;
+      text-transform: uppercase;
+      font-family: "AvenirBook";
+      font-size: 14px;
+      border-radius: 0;
+      padding-top: 11px;
+      margin-right: 20px;
+      span {
+        color: $color-secondary;
+        font-family: "AvenirBlack";
+      }
+      &:hover {
+        background: transparent;
+        border: 2px solid $color-secondary;
+        color: $color-white;
+        opacity: 0.5;
+      }
+    }
+  }
 }
