--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -109,9 +109,9 @@
   }
   .bannerDescStyle {
     position: absolute;
-    top: 250px;
+    top: 120px;
     display: flex;
-    z-index: 999;
+    // z-index: 999;
     padding: 0 20px;
     .bannerCaption {
       font-family: "AvenirBook";
