--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -204,9 +204,9 @@ body {
             top: 80%;
             z-index: 99;
             width: 100%;
-            margin-left: 30px;
+            margin-left: 40px;
             margin-top: 10px;
-            background: #fff;
+            background: #eed892;
             text-align: center;
             justify-content: center;
             align-items: center;
