--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -211,7 +211,9 @@ body {
             // width: 100%;
             margin-left: 30px;
             // margin-top: 10px;
-            background: #eed892;
+            background: #fff;
+            // background: #eed892;
+            font-size: 14px;
             text-align: center;
             justify-content: center;
             align-items: center;
@@ -3011,7 +3013,6 @@ p.testimonials-name {
   }
 }
 @media screen and (max-width: 991px) {
-  
   .service-row {
     .hide-sm {
       display: none;
