made changes in homepage

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3011,6 +3011,9 @@ p.testimonials-name {
       height: auto;
     }
   }
+  .apply-border {
+    display: none;
+  }
 }
 @media screen and (max-width: 991px) {
   .service-row {
