--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -286,6 +286,19 @@ body {
   padding: 55px 10px;
 }
 
+.content-single {
+  .wrap {
+    p {
+      img,
+      svg {
+        width: 100%;
+        height: 500px;
+        object-fit: cover;
+      }
+    }
+  }
+}
+
 @media screen and (min-width: $content-width) {
   .wrap {
     padding: 0;
@@ -3015,6 +3028,18 @@ p.testimonials-name {
   }
   .apply-border {
     display: none;
+  }
+  .content-single {
+    .wrap {
+      p {
+        img,
+        svg {
+          width: 100%;
+          height: 400px;
+          object-fit: cover;
+        }
+      }
+    }
   }
 }
 @media screen and (max-width: 991px) {
