removed fixed height of image

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -292,7 +292,7 @@ body {
       img,
       svg {
         width: 100%;
-        height: 500px;
+        // height: 500px;
         object-fit: cover;
       }
     }
@@ -3035,7 +3035,7 @@ p.testimonials-name {
         img,
         svg {
           width: 100%;
-          height: 400px;
+          // height: 400px;
           object-fit: cover;
         }
       }
