--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -218,7 +218,7 @@ body {
 
 .input-group-prepend-custom {
   position: absolute;
-  z-index: 4;
+  z-index: 10;
   padding: 8px;
   display: flex;
   justify-content: center;
@@ -260,7 +260,7 @@ body {
 }
 
 .padding-left-40 {
-  padding-left: 40px;
+  padding-left: 40px !important;
 }
 
 .end-0 {
