--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -13,11 +13,13 @@
 
 .description {
   h3 {
+    color: #ffff;
     span {
       margin-left: 20px;
     }
   }
   p {
+    color: #ffff;
     span {
       color: #ffff;
       font-weight: 100;
