--- a/src/scss/components/Hero.module.scss
+++ b/src/scss/components/Hero.module.scss
@@ -4,12 +4,13 @@
 
 .hero {
   background-color: $color-dark-gray;
-  background-position: 48% 72%;
+  background-position: 100% 100%;
   background-size: cover;
   background-repeat: no-repeat;
   color: $color-white;
   padding: 7em 0 9em;
   position: relative;
+  height: 100vh;
 }
 
 .wrap {
@@ -20,6 +21,10 @@
   position: relative;
   z-index: 1;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
 }
 .bannerBtn {
   background: transparent;
