--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -10,6 +10,14 @@
   width: 100%;
   height: 100%;
 }
+.banner_overlay {
+  background-color: rgba(0, 0, 0, 0.65);
+  position: absolute;
+  top: 145px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 .description {
   h3 {
@@ -30,6 +38,8 @@
   position: absolute;
   top: 120px;
   display: flex;
+  align-items: center;
+  flex-direction: column;
   // z-index: 999;
   padding: 0 20px;
   .bannerCaption {
@@ -84,6 +94,8 @@
   vertical-align: middle;
   display: flex;
   z-index: 999;
+  margin-top: 20%;
+  justify-content: center;
   .bannerCaption {
     font-family: "AvenirBook";
     .sliderTitle {
