--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -96,6 +96,7 @@
   z-index: 999;
   margin-top: 20%;
   justify-content: center;
+  padding-left: 50px;
   .bannerCaption {
     font-family: "AvenirBook";
     .sliderTitle {
