--- a/src/scss/components/Hero.module.scss
+++ b/src/scss/components/Hero.module.scss
@@ -16,7 +16,7 @@
 .wrap {
   margin: 0 auto;
   max-width: $content-width;
-  overflow: auto;
+  overflow: hidden;
   padding: 0 10px;
   position: relative;
   z-index: 1;
