--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -471,6 +471,7 @@ body {
         width: 100%;
         margin: 0;
         padding: 0;
+        font-size: 14px;
         background: #fff;
         text-align: center;
         justify-content: center;
@@ -529,6 +530,7 @@ body {
                 cursor: pointer;
                 text-transform: uppercase;
                 // margin: 0;
+                font-size: 12px;
 
                 border-bottom: 2px solid $color-secondary;
                 &:hover {
