--- a/src/scss/components/Hero.module.scss
+++ b/src/scss/components/Hero.module.scss
@@ -2,6 +2,23 @@
 
 @import "scss/variables";
 
+.overlay {
+  background-color: rgba(0, 0, 0, 0.65);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.banner_overlay {
+  background-color: rgba(0, 0, 0, 0.65);
+  position: absolute;
+  top: 145px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .hero {
   background-color: $color-dark-gray;
   background-position: 100% 100%;
@@ -19,7 +36,7 @@
   overflow: hidden;
   padding: 0 10px;
   position: relative;
-  z-index: 1;
+  z-index: 1000;
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
