--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -466,7 +466,8 @@ body {
 
       ul.submenu {
         display: none;
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+        grid-template-rows: repeat(2, auto);
         position: absolute;
         top: 100%;
         left: 0;
@@ -507,7 +508,7 @@ body {
             left: 100%;
             background: #fff;
             // border: 1px solid #ddd;
-            width: auto;
+            width: 100%;
             min-width: 200px;
 
             li {
