--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -459,116 +459,118 @@ body {
       position: relative;
 
       &:hover {
-        ul.submenu {
+        ul.submenu,
+        ul.submenu-loc {
           display: grid;
         }
       }
 
-      ul.submenu {
-        display: none;
-        grid-template-columns: repeat(2, minmax(230px, 1fr));
-        grid-template-rows: auto;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        z-index: 99;
-        background: #fff;
-        padding: 2px;
-        font-size: 14px;
-        // border: 1px solid #ddd;
+      ul {
+        &.submenu,
+        &.submenu-loc {
+          display: none;
+          grid-template-columns: repeat(4, minmax(220px, 1fr));
+          grid-template-rows: auto;
+          position: absolute;
+          top: 100%;
+          left: 0;
+          z-index: 99;
+          background: #fff;
+          padding: 2px;
+          font-size: 14px;
 
-        li {
-          // padding: 2px;
-          box-sizing: border-box;
-          position: relative;
-
-          &:hover {
-            ul.submenu-child {
-              display: grid;
-            }
+          &.submenu-loc {
+            grid-template-columns: repeat(4, minmax(220px, 1fr));
+            top: 10;
+            left: -500px;
           }
 
-          span.sublink {
-            padding: 2px;
-            display: block;
-            cursor: pointer;
-            text-transform: uppercase;
-            border-bottom: 2px solid $color-secondary;
+          li {
+            box-sizing: border-box;
+            position: relative;
 
             &:hover {
-              background: $color-secondary;
-              color: $color-white;
-            }
-          }
-
-          ul.submenu-child {
-            display: none;
-            position: absolute;
-            top: 0;
-            left: 100%;
-            background: #fff;
-            // border: 1px solid #ddd;
-            width: 100%;
-            min-width: 200px;
-
-            li {
-              width: 100%;
-
-              span.sublink {
-                // padding: 2px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                cursor: pointer;
-
-                text-transform: uppercase;
-                font-size: 12px;
-                border-bottom: 2px solid $color-secondary;
-
-                &:hover {
-                  background: $color-secondary;
-                  color: $color-white;
-                }
-              }
-            }
-          }
-
-          &.commercial-mortgages,
-          &.vancouver,
-          &.surrey {
-            &:hover {
-              background: $color-secondary;
-              color: $color-white;
               ul.submenu-child {
                 display: grid;
               }
             }
-          }
 
-          &.commercial-mortgages ul.submenu-child {
-            right: auto;
-            right: 100%;
-            top: 0;
-          }
+            span.sublink {
+              padding: 2px;
+              display: block;
+              cursor: pointer;
+              text-transform: uppercase;
+              border-bottom: 2px solid $color-secondary;
 
-          &.vancouver ul.submenu-child {
-            left: auto;
-            left: -100%;
-            top: 05px;
-          }
+              &:hover {
+                background: $color-secondary;
+                color: $color-white;
+              }
+            }
 
-          &.surrey ul.submenu-child {
-            left: auto;
-            left: -100%;
-            top: -115px;
+            ul.submenu-child {
+              display: none;
+              position: absolute;
+              top: 0;
+              left: 100%;
+              background: #fff;
+              width: 100%;
+              min-width: 100px;
+
+              li {
+                width: 100%;
+
+                span.sublink {
+                  display: flex;
+                  flex-direction: column;
+                  align-items: center;
+                  cursor: pointer;
+                  text-transform: uppercase;
+                  font-size: 12px;
+                  border-bottom: 2px solid $color-secondary;
+
+                  &:hover {
+                    background: $color-secondary;
+                    color: $color-white;
+                  }
+                }
+              }
+            }
+
+            &.commercial-mortgages,
+            &.vancouver,
+            &.surrey {
+              &:hover {
+                background: $color-secondary;
+                color: $color-white;
+
+                ul.submenu-child {
+                  display: grid;
+                }
+              }
+            }
+
+            &.commercial-mortgages ul.submenu-child {
+              right: 100%;
+              top: 0;
+            }
+
+            &.vancouver ul.submenu-child {
+              left: -100%;
+              top: 5px;
+            }
+
+            &.surrey ul.submenu-child {
+              left: -100%;
+              top: 0;
+            }
           }
         }
       }
 
       .HeadBtn {
         width: 150px;
-        padding-top: 1.5px;
-        padding-bottom: 1.5px;
+        padding: 1.5px 0;
         color: $color-secondary;
         font-family: "AvenirBlack";
         background: transparent;
@@ -578,7 +580,6 @@ body {
         &:hover {
           background: $color-black;
           border: 2px solid $color-secondary;
-          text-transform: uppercase;
         }
       }
     }
