added new location pages

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -509,6 +509,7 @@ body {
             }
 
             ul.submenu-child {
+              z-index: 1000;
               display: none;
               position: absolute;
               top: 0;
